src/top/snapshots/zizq__top__ui__tests__render_in_flight_tab_with_jobs.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 2 in-flight, 2 ready

  Depth[││││                                                                                                   4 jobs]

   In-Flight   Ready   Scheduled
                             ID   PRIORITY QUEUE                     DURATION   ATTEMPTS TYPE
          job-emails-send_email          0 emails                          3s          1 send_email
             job-billing-charge          0 billing                      2m30s          3 charge
 ←/→ Switch tab  q Quit
