src/top/snapshots/zizq__top__ui__tests__render_ready_tab_wide.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 160, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 2 in-flight, 2 ready, 2 scheduled
          ▼
  Depth[││││││                                                                                                 6 jobs]
          ▲
   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE                           DELAY   ATTEMPTS TYPE
70a3cc87a1f0890da08e8b3cc86          0 default                            5s          0 generate_annual_report_email
70a3dd47c2308a1fb09e9c4dd97          5 default                          1m2s          2 send_welcome_email
 n/p Tabs  ←↑→↓ Scroll  q Quit
